Fixes click issue on mobile.

--- a/css/back-to-top.css
+++ b/css/back-to-top.css
@@ -43,6 +43,7 @@ Modules - reusable parts of our design
   /* the button becomes visible */
   visibility: visible;
   opacity: 1;
+  z-index: 1000;
 }
 .cd-top.cd-fade-out {
   /* if the user keeps scrolling down, the button is out of focus and becomes less visible */
